Project/V1.1/cdk.out/ProjectAtallaVpcStack.template.json
{
 "Resources": {
  "vpcatallaweb4BEE7EE3": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.10.10.0/24",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "vpc-atalla-web"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/Resource"
   }
  },
  "vpcatallawebprivatesubnetSubnet1SubnetFB418546": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcatallaweb4BEE7EE3"
    },
    "AvailabilityZone": "eu-central-1a",
    "CidrBlock": "10.10.10.0/26",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private-subnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "ProjectAtallaVpcStack/vpc-atalla-web/private-subnetSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/private-subnetSubnet1/Subnet"
   }
  },
  "vpcatallawebprivatesubnetSubnet1RouteTable8AE51475": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcatallaweb4BEE7EE3"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProjectAtallaVpcStack/vpc-atalla-web/private-subnetSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/private-subnetSubnet1/RouteTable"
   }
  },
  "vpcatallawebprivatesubnetSubnet1RouteTableAssociationBBEB5F6D": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcatallawebprivatesubnetSubnet1RouteTable8AE51475"
    },
    "SubnetId": {
     "Ref": "vpcatallawebprivatesubnetSubnet1SubnetFB418546"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/private-subnetSubnet1/RouteTableAssociation"
   }
  },
  "vpcatallawebprivatesubnetSubnet1DefaultRoute9F564B4D": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcatallawebprivatesubnetSubnet1RouteTable8AE51475"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "vpcatallawebpublicsubnetSubnet1NATGatewayB7E28F0E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/private-subnetSubnet1/DefaultRoute"
   }
  },
  "vpcatallawebprivatesubnetSubnet2SubnetFC68112C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcatallaweb4BEE7EE3"
    },
    "AvailabilityZone": "eu-central-1b",
    "CidrBlock": "10.10.10.64/26",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private-subnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "ProjectAtallaVpcStack/vpc-atalla-web/private-subnetSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/private-subnetSubnet2/Subnet"
   }
  },
  "vpcatallawebprivatesubnetSubnet2RouteTable6E78400C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcatallaweb4BEE7EE3"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProjectAtallaVpcStack/vpc-atalla-web/private-subnetSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/private-subnetSubnet2/RouteTable"
   }
  },
  "vpcatallawebprivatesubnetSubnet2RouteTableAssociation1324CA0E": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcatallawebprivatesubnetSubnet2RouteTable6E78400C"
    },
    "SubnetId": {
     "Ref": "vpcatallawebprivatesubnetSubnet2SubnetFC68112C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/private-subnetSubnet2/RouteTableAssociation"
   }
  },
  "vpcatallawebprivatesubnetSubnet2DefaultRouteD0151FC7": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcatallawebprivatesubnetSubnet2RouteTable6E78400C"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "vpcatallawebpublicsubnetSubnet1NATGatewayB7E28F0E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/private-subnetSubnet2/DefaultRoute"
   }
  },
  "vpcatallawebprivatesubnetSubnet3SubnetFEFCCF9A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcatallaweb4BEE7EE3"
    },
    "AvailabilityZone": "eu-central-1c",
    "CidrBlock": "10.10.10.128/26",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "private-subnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "ProjectAtallaVpcStack/vpc-atalla-web/private-subnetSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/private-subnetSubnet3/Subnet"
   }
  },
  "vpcatallawebprivatesubnetSubnet3RouteTableA689674A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcatallaweb4BEE7EE3"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProjectAtallaVpcStack/vpc-atalla-web/private-subnetSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/private-subnetSubnet3/RouteTable"
   }
  },
  "vpcatallawebprivatesubnetSubnet3RouteTableAssociationBF328187": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcatallawebprivatesubnetSubnet3RouteTableA689674A"
    },
    "SubnetId": {
     "Ref": "vpcatallawebprivatesubnetSubnet3SubnetFEFCCF9A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/private-subnetSubnet3/RouteTableAssociation"
   }
  },
  "vpcatallawebprivatesubnetSubnet3DefaultRoute4163A3D4": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcatallawebprivatesubnetSubnet3RouteTableA689674A"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "vpcatallawebpublicsubnetSubnet1NATGatewayB7E28F0E"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/private-subnetSubnet3/DefaultRoute"
   }
  },
  "vpcatallawebpublicsubnetSubnet1Subnet9196B15F": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcatallaweb4BEE7EE3"
    },
    "AvailabilityZone": "eu-central-1a",
    "CidrBlock": "10.10.10.192/28",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public-subnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet1/Subnet"
   }
  },
  "vpcatallawebpublicsubnetSubnet1RouteTable298557A0": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcatallaweb4BEE7EE3"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet1/RouteTable"
   }
  },
  "vpcatallawebpublicsubnetSubnet1RouteTableAssociation3DD1AC3C": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcatallawebpublicsubnetSubnet1RouteTable298557A0"
    },
    "SubnetId": {
     "Ref": "vpcatallawebpublicsubnetSubnet1Subnet9196B15F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet1/RouteTableAssociation"
   }
  },
  "vpcatallawebpublicsubnetSubnet1DefaultRoute1ADB47E5": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcatallawebpublicsubnetSubnet1RouteTable298557A0"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "vpcatallawebIGW935096D2"
    }
   },
   "DependsOn": [
    "vpcatallawebVPCGWDBAC3C2F"
   ],
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet1/DefaultRoute"
   }
  },
  "vpcatallawebpublicsubnetSubnet1EIP1ACE3A34": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet1/EIP"
   }
  },
  "vpcatallawebpublicsubnetSubnet1NATGatewayB7E28F0E": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "vpcatallawebpublicsubnetSubnet1Subnet9196B15F"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "vpcatallawebpublicsubnetSubnet1EIP1ACE3A34",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet1"
     }
    ]
   },
   "DependsOn": [
    "vpcatallawebpublicsubnetSubnet1DefaultRoute1ADB47E5",
    "vpcatallawebpublicsubnetSubnet1RouteTableAssociation3DD1AC3C"
   ],
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet1/NATGateway"
   }
  },
  "vpcatallawebpublicsubnetSubnet2SubnetF3A7515D": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcatallaweb4BEE7EE3"
    },
    "AvailabilityZone": "eu-central-1b",
    "CidrBlock": "10.10.10.208/28",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public-subnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet2/Subnet"
   }
  },
  "vpcatallawebpublicsubnetSubnet2RouteTable7794F5BB": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcatallaweb4BEE7EE3"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet2/RouteTable"
   }
  },
  "vpcatallawebpublicsubnetSubnet2RouteTableAssociation908E52EA": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcatallawebpublicsubnetSubnet2RouteTable7794F5BB"
    },
    "SubnetId": {
     "Ref": "vpcatallawebpublicsubnetSubnet2SubnetF3A7515D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet2/RouteTableAssociation"
   }
  },
  "vpcatallawebpublicsubnetSubnet2DefaultRoute5501E451": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcatallawebpublicsubnetSubnet2RouteTable7794F5BB"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "vpcatallawebIGW935096D2"
    }
   },
   "DependsOn": [
    "vpcatallawebVPCGWDBAC3C2F"
   ],
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet2/DefaultRoute"
   }
  },
  "vpcatallawebpublicsubnetSubnet3Subnet21EEFC0D": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcatallaweb4BEE7EE3"
    },
    "AvailabilityZone": "eu-central-1c",
    "CidrBlock": "10.10.10.224/28",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public-subnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet3/Subnet"
   }
  },
  "vpcatallawebpublicsubnetSubnet3RouteTable09233D7A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcatallaweb4BEE7EE3"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet3/RouteTable"
   }
  },
  "vpcatallawebpublicsubnetSubnet3RouteTableAssociationDD3ED3FE": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcatallawebpublicsubnetSubnet3RouteTable09233D7A"
    },
    "SubnetId": {
     "Ref": "vpcatallawebpublicsubnetSubnet3Subnet21EEFC0D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet3/RouteTableAssociation"
   }
  },
  "vpcatallawebpublicsubnetSubnet3DefaultRoute1566252A": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcatallawebpublicsubnetSubnet3RouteTable09233D7A"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "vpcatallawebIGW935096D2"
    }
   },
   "DependsOn": [
    "vpcatallawebVPCGWDBAC3C2F"
   ],
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/public-subnetSubnet3/DefaultRoute"
   }
  },
  "vpcatallawebIGW935096D2": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "vpc-atalla-web"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/IGW"
   }
  },
  "vpcatallawebVPCGWDBAC3C2F": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "vpcatallaweb4BEE7EE3"
    },
    "InternetGatewayId": {
     "Ref": "vpcatallawebIGW935096D2"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-web/VPCGW"
   }
  },
  "webaclA21B3BBA": {
   "Type": "AWS::EC2::NetworkAcl",
   "Properties": {
    "VpcId": {
     "Ref": "vpcatallaweb4BEE7EE3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web-acl/Resource"
   }
  },
  "webaclDefaultAssociationProjectAtallaVpcStackvpcatallawebprivatesubnetSubnet14A28B545E08DCA99": {
   "Type": "AWS::EC2::SubnetNetworkAclAssociation",
   "Properties": {
    "NetworkAclId": {
     "Ref": "webaclA21B3BBA"
    },
    "SubnetId": {
     "Ref": "vpcatallawebprivatesubnetSubnet1SubnetFB418546"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web-acl/DefaultAssociationProjectAtallaVpcStackvpcatallawebprivatesubnetSubnet14A28B545/Resource"
   }
  },
  "webaclDefaultAssociationProjectAtallaVpcStackvpcatallawebprivatesubnetSubnet2A895E4EA7A8965CA": {
   "Type": "AWS::EC2::SubnetNetworkAclAssociation",
   "Properties": {
    "NetworkAclId": {
     "Ref": "webaclA21B3BBA"
    },
    "SubnetId": {
     "Ref": "vpcatallawebprivatesubnetSubnet2SubnetFC68112C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web-acl/DefaultAssociationProjectAtallaVpcStackvpcatallawebprivatesubnetSubnet2A895E4EA/Resource"
   }
  },
  "webaclDefaultAssociationProjectAtallaVpcStackvpcatallawebprivatesubnetSubnet3A35C1E5DEF923A9E": {
   "Type": "AWS::EC2::SubnetNetworkAclAssociation",
   "Properties": {
    "NetworkAclId": {
     "Ref": "webaclA21B3BBA"
    },
    "SubnetId": {
     "Ref": "vpcatallawebprivatesubnetSubnet3SubnetFEFCCF9A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web-acl/DefaultAssociationProjectAtallaVpcStackvpcatallawebprivatesubnetSubnet3A35C1E5D/Resource"
   }
  },
  "webaclrulehttpipv4ingress3F8B8309": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "webaclA21B3BBA"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 100,
    "CidrBlock": "10.10.10.0/24",
    "Egress": false,
    "PortRange": {
     "From": 80,
     "To": 80
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web-acl/rule-http-ipv4-ingress/Resource"
   }
  },
  "webaclrulesshingressEFAB5ADE": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "webaclA21B3BBA"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 120,
    "CidrBlock": "10.20.20.0/24",
    "Egress": false,
    "PortRange": {
     "From": 22,
     "To": 22
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web-acl/rule-ssh-ingress/Resource"
   }
  },
  "webaclruleephemeralingressipv4F51E1F57": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "webaclA21B3BBA"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 130,
    "CidrBlock": "0.0.0.0/0",
    "Egress": false,
    "PortRange": {
     "From": 1024,
     "To": 65535
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web-acl/rule-ephemeral-ingress-ipv4/Resource"
   }
  },
  "webaclruleephemeralipv6ingress28DDA4E6": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "webaclA21B3BBA"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 160,
    "Egress": false,
    "Ipv6CidrBlock": "::/0",
    "PortRange": {
     "From": 1024,
     "To": 65535
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web-acl/rule-ephemeral-ipv6-ingress/Resource"
   }
  },
  "webaclrulehttpipv4egressBECF5EF8": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "webaclA21B3BBA"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 100,
    "CidrBlock": "0.0.0.0/0",
    "Egress": true,
    "PortRange": {
     "From": 80,
     "To": 80
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web-acl/rule-http-ipv4-egress/Resource"
   }
  },
  "webaclrulehttpsipv4egress95B6928D": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "webaclA21B3BBA"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 110,
    "CidrBlock": "0.0.0.0/0",
    "Egress": true,
    "PortRange": {
     "From": 443,
     "To": 443
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web-acl/rule-https-ipv4-egress/Resource"
   }
  },
  "webaclruleephemeralegressipv4F6B1EE08": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "webaclA21B3BBA"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 120,
    "CidrBlock": "0.0.0.0/0",
    "Egress": true,
    "PortRange": {
     "From": 1024,
     "To": 65535
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web-acl/rule-ephemeral-egress-ipv4/Resource"
   }
  },
  "webaclrulehttpipv6egress3355EC91": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "webaclA21B3BBA"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 130,
    "Egress": true,
    "Ipv6CidrBlock": "::/0",
    "PortRange": {
     "From": 80,
     "To": 80
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web-acl/rule-http-ipv6-egress/Resource"
   }
  },
  "webaclrulehttpsipv6egressD6D12039": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "webaclA21B3BBA"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 140,
    "Egress": true,
    "Ipv6CidrBlock": "::/0",
    "PortRange": {
     "From": 443,
     "To": 443
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web-acl/rule-https-ipv6-egress/Resource"
   }
  },
  "webaclruleephemeralipv6egress5EDDC8F8": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "webaclA21B3BBA"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 150,
    "Egress": true,
    "Ipv6CidrBlock": "::/0",
    "PortRange": {
     "From": 1024,
     "To": 65535
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web-acl/rule-ephemeral-ipv6-egress/Resource"
   }
  },
  "albacl45BC8302": {
   "Type": "AWS::EC2::NetworkAcl",
   "Properties": {
    "VpcId": {
     "Ref": "vpcatallaweb4BEE7EE3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/alb-acl/Resource"
   }
  },
  "albaclDefaultAssociationProjectAtallaVpcStackvpcatallawebpublicsubnetSubnet145A15B80A25625F8": {
   "Type": "AWS::EC2::SubnetNetworkAclAssociation",
   "Properties": {
    "NetworkAclId": {
     "Ref": "albacl45BC8302"
    },
    "SubnetId": {
     "Ref": "vpcatallawebpublicsubnetSubnet1Subnet9196B15F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/alb-acl/DefaultAssociationProjectAtallaVpcStackvpcatallawebpublicsubnetSubnet145A15B80/Resource"
   }
  },
  "albaclDefaultAssociationProjectAtallaVpcStackvpcatallawebpublicsubnetSubnet229215BA7A4C833BF": {
   "Type": "AWS::EC2::SubnetNetworkAclAssociation",
   "Properties": {
    "NetworkAclId": {
     "Ref": "albacl45BC8302"
    },
    "SubnetId": {
     "Ref": "vpcatallawebpublicsubnetSubnet2SubnetF3A7515D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/alb-acl/DefaultAssociationProjectAtallaVpcStackvpcatallawebpublicsubnetSubnet229215BA7/Resource"
   }
  },
  "albaclDefaultAssociationProjectAtallaVpcStackvpcatallawebpublicsubnetSubnet322BC1E667769C7A6": {
   "Type": "AWS::EC2::SubnetNetworkAclAssociation",
   "Properties": {
    "NetworkAclId": {
     "Ref": "albacl45BC8302"
    },
    "SubnetId": {
     "Ref": "vpcatallawebpublicsubnetSubnet3Subnet21EEFC0D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/alb-acl/DefaultAssociationProjectAtallaVpcStackvpcatallawebpublicsubnetSubnet322BC1E66/Resource"
   }
  },
  "albaclrulehttpipv4ingress46DDFD28": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "albacl45BC8302"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 100,
    "CidrBlock": "0.0.0.0/0",
    "Egress": false,
    "PortRange": {
     "From": 80,
     "To": 80
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/alb-acl/rule-http-ipv4-ingress/Resource"
   }
  },
  "albaclrulehttpsipv4ingress5FCE0A40": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "albacl45BC8302"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 110,
    "CidrBlock": "0.0.0.0/0",
    "Egress": false,
    "PortRange": {
     "From": 443,
     "To": 443
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/alb-acl/rule-https-ipv4-ingress/Resource"
   }
  },
  "albaclruleephemeralingressipv417D6B2E0": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "albacl45BC8302"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 120,
    "CidrBlock": "0.0.0.0/0",
    "Egress": false,
    "PortRange": {
     "From": 1024,
     "To": 65535
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/alb-acl/rule-ephemeral-ingress-ipv4/Resource"
   }
  },
  "albaclrulehttpipv6ingressEBCEBC70": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "albacl45BC8302"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 130,
    "Egress": false,
    "Ipv6CidrBlock": "::/0",
    "PortRange": {
     "From": 80,
     "To": 80
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/alb-acl/rule-http-ipv6-ingress/Resource"
   }
  },
  "albaclrulehttpsipv6ingress2DE11725": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "albacl45BC8302"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 140,
    "Egress": false,
    "Ipv6CidrBlock": "::/0",
    "PortRange": {
     "From": 443,
     "To": 443
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/alb-acl/rule-https-ipv6-ingress/Resource"
   }
  },
  "albaclruleephemeralipv6ingress0BCE9D87": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "albacl45BC8302"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 150,
    "Egress": false,
    "Ipv6CidrBlock": "::/0",
    "PortRange": {
     "From": 1024,
     "To": 65535
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/alb-acl/rule-ephemeral-ipv6-ingress/Resource"
   }
  },
  "albaclrulehttpipv4egress181B7174": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "albacl45BC8302"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 100,
    "CidrBlock": "0.0.0.0/0",
    "Egress": true,
    "PortRange": {
     "From": 80,
     "To": 80
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/alb-acl/rule-http-ipv4-egress/Resource"
   }
  },
  "albaclrulehttpsipv4egressD8DCDBA5": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "albacl45BC8302"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 110,
    "CidrBlock": "0.0.0.0/0",
    "Egress": true,
    "PortRange": {
     "From": 443,
     "To": 443
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/alb-acl/rule-https-ipv4-egress/Resource"
   }
  },
  "albaclruleephemeralegressipv49520E239": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "albacl45BC8302"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 120,
    "CidrBlock": "0.0.0.0/0",
    "Egress": true,
    "PortRange": {
     "From": 1024,
     "To": 65535
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/alb-acl/rule-ephemeral-egress-ipv4/Resource"
   }
  },
  "albaclruleephemeralipv6egressAC1A58B5": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "albacl45BC8302"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 150,
    "Egress": true,
    "Ipv6CidrBlock": "::/0",
    "PortRange": {
     "From": 1024,
     "To": 65535
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/alb-acl/rule-ephemeral-ipv6-egress/Resource"
   }
  },
  "webSG9F367DE6": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "ProjectAtallaVpcStack/webSG",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "10.10.10.0/24",
      "Description": "from 10.10.10.0/24:80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     },
     {
      "CidrIp": "10.20.20.0/24",
      "Description": "from 10.20.20.0/24:22",
      "FromPort": 22,
      "IpProtocol": "tcp",
      "ToPort": 22
     }
    ],
    "VpcId": {
     "Ref": "vpcatallaweb4BEE7EE3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/webSG/Resource"
   }
  },
  "webSGfromProjectAtallaVpcStackapLbSecurityGroupD76E6FED80ABED7AED": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "FromPort": 80,
    "GroupId": {
     "Fn::GetAtt": [
      "webSG9F367DE6",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "apLbSecurityGroupC404307F",
      "GroupId"
     ]
    },
    "ToPort": 80
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/webSG/from ProjectAtallaVpcStackapLbSecurityGroupD76E6FED:80"
   }
  },
  "vpcatallaadmin09930B01": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.20.20.0/24",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "vpc-atalla-admin"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-admin/Resource"
   }
  },
  "vpcatallaadminpublicsubnetSubnet1Subnet8FCCAAC4": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcatallaadmin09930B01"
    },
    "AvailabilityZone": "eu-central-1a",
    "CidrBlock": "10.20.20.0/25",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public-subnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "ProjectAtallaVpcStack/vpc-atalla-admin/public-subnetSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-admin/public-subnetSubnet1/Subnet"
   }
  },
  "vpcatallaadminpublicsubnetSubnet1RouteTable62F1F1C8": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcatallaadmin09930B01"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProjectAtallaVpcStack/vpc-atalla-admin/public-subnetSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-admin/public-subnetSubnet1/RouteTable"
   }
  },
  "vpcatallaadminpublicsubnetSubnet1RouteTableAssociation42FF1452": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcatallaadminpublicsubnetSubnet1RouteTable62F1F1C8"
    },
    "SubnetId": {
     "Ref": "vpcatallaadminpublicsubnetSubnet1Subnet8FCCAAC4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-admin/public-subnetSubnet1/RouteTableAssociation"
   }
  },
  "vpcatallaadminpublicsubnetSubnet1DefaultRoute8EEB320C": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcatallaadminpublicsubnetSubnet1RouteTable62F1F1C8"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "vpcatallaadminIGWB761A07F"
    }
   },
   "DependsOn": [
    "vpcatallaadminVPCGW3324FAEC"
   ],
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-admin/public-subnetSubnet1/DefaultRoute"
   }
  },
  "vpcatallaadminpublicsubnetSubnet2Subnet1D7DDB73": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcatallaadmin09930B01"
    },
    "AvailabilityZone": "eu-central-1b",
    "CidrBlock": "10.20.20.128/25",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "public-subnet"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "ProjectAtallaVpcStack/vpc-atalla-admin/public-subnetSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-admin/public-subnetSubnet2/Subnet"
   }
  },
  "vpcatallaadminpublicsubnetSubnet2RouteTableA1872FC3": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcatallaadmin09930B01"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProjectAtallaVpcStack/vpc-atalla-admin/public-subnetSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-admin/public-subnetSubnet2/RouteTable"
   }
  },
  "vpcatallaadminpublicsubnetSubnet2RouteTableAssociation00D7C1B5": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcatallaadminpublicsubnetSubnet2RouteTableA1872FC3"
    },
    "SubnetId": {
     "Ref": "vpcatallaadminpublicsubnetSubnet2Subnet1D7DDB73"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-admin/public-subnetSubnet2/RouteTableAssociation"
   }
  },
  "vpcatallaadminpublicsubnetSubnet2DefaultRouteEF5A2069": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcatallaadminpublicsubnetSubnet2RouteTableA1872FC3"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "vpcatallaadminIGWB761A07F"
    }
   },
   "DependsOn": [
    "vpcatallaadminVPCGW3324FAEC"
   ],
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-admin/public-subnetSubnet2/DefaultRoute"
   }
  },
  "vpcatallaadminIGWB761A07F": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "vpc-atalla-admin"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-admin/IGW"
   }
  },
  "vpcatallaadminVPCGW3324FAEC": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "vpcatallaadmin09930B01"
    },
    "InternetGatewayId": {
     "Ref": "vpcatallaadminIGWB761A07F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/vpc-atalla-admin/VPCGW"
   }
  },
  "adminacl57A9013A": {
   "Type": "AWS::EC2::NetworkAcl",
   "Properties": {
    "VpcId": {
     "Ref": "vpcatallaadmin09930B01"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin-acl/Resource"
   }
  },
  "adminaclDefaultAssociationProjectAtallaVpcStackvpcatallaadminpublicsubnetSubnet200F244F2A14E7532": {
   "Type": "AWS::EC2::SubnetNetworkAclAssociation",
   "Properties": {
    "NetworkAclId": {
     "Ref": "adminacl57A9013A"
    },
    "SubnetId": {
     "Ref": "vpcatallaadminpublicsubnetSubnet2Subnet1D7DDB73"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin-acl/DefaultAssociationProjectAtallaVpcStackvpcatallaadminpublicsubnetSubnet200F244F2/Resource"
   }
  },
  "adminaclrulesshingresshomeB67D5E83": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "adminacl57A9013A"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 100,
    "CidrBlock": "82.170.155.178/32",
    "Egress": false,
    "PortRange": {
     "From": 22,
     "To": 22
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin-acl/rule-ssh-ingress-home/Resource"
   }
  },
  "adminaclrulerdpingresshomeF1B15081": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "adminacl57A9013A"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 110,
    "CidrBlock": "82.170.155.178/32",
    "Egress": false,
    "PortRange": {
     "From": 3389,
     "To": 3389
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin-acl/rule-rdp-ingress-home/Resource"
   }
  },
  "adminaclruleephemeralingressweb54574B40": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "adminacl57A9013A"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 120,
    "CidrBlock": "10.10.10.0/24",
    "Egress": false,
    "PortRange": {
     "From": 1024,
     "To": 65535
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin-acl/rule-ephemeral-ingress-web/Resource"
   }
  },
  "adminaclruleephemeralipv6ingress283CC324": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "adminacl57A9013A"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 130,
    "Egress": false,
    "Ipv6CidrBlock": "::/0",
    "PortRange": {
     "From": 1024,
     "To": 65535
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin-acl/rule-ephemeral-ipv6-ingress/Resource"
   }
  },
  "adminaclruleephemeralingressA2300C8B": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "adminacl57A9013A"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 140,
    "CidrBlock": "0.0.0.0/0",
    "Egress": false,
    "PortRange": {
     "From": 1024,
     "To": 65535
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin-acl/rule-ephemeral-ingress/Resource"
   }
  },
  "adminaclrulesshegresswebE2403150": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "adminacl57A9013A"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 100,
    "CidrBlock": "10.10.10.0/24",
    "Egress": true,
    "PortRange": {
     "From": 22,
     "To": 22
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin-acl/rule-ssh-egress-web/Resource"
   }
  },
  "adminaclrulehttpipv6egress53B2E37D": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "adminacl57A9013A"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 110,
    "Egress": true,
    "Ipv6CidrBlock": "::/0",
    "PortRange": {
     "From": 80,
     "To": 80
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin-acl/rule-http-ipv6-egress/Resource"
   }
  },
  "adminaclrulehttpsipv6egress65AB2009": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "adminacl57A9013A"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 120,
    "Egress": true,
    "Ipv6CidrBlock": "::/0",
    "PortRange": {
     "From": 443,
     "To": 443
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin-acl/rule-https-ipv6-egress/Resource"
   }
  },
  "adminaclruleephemeralegresshome0485A1B1": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "adminacl57A9013A"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 130,
    "CidrBlock": "82.170.155.178/32",
    "Egress": true,
    "PortRange": {
     "From": 1024,
     "To": 65535
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin-acl/rule-ephemeral-egress-home/Resource"
   }
  },
  "adminaclrulehttpingresshome3759213B": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "adminacl57A9013A"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 140,
    "CidrBlock": "0.0.0.0/0",
    "Egress": true,
    "PortRange": {
     "From": 80,
     "To": 80
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin-acl/rule-http-ingress-home/Resource"
   }
  },
  "adminaclrulehttpsingresshome517DD7AE": {
   "Type": "AWS::EC2::NetworkAclEntry",
   "Properties": {
    "NetworkAclId": {
     "Ref": "adminacl57A9013A"
    },
    "Protocol": 6,
    "RuleAction": "allow",
    "RuleNumber": 150,
    "CidrBlock": "0.0.0.0/0",
    "Egress": true,
    "PortRange": {
     "From": 443,
     "To": 443
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin-acl/rule-https-ingress-home/Resource"
   }
  },
  "adminSG897E7E8B": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "ProjectAtallaVpcStack/adminSG",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "SecurityGroupIngress": [
     {
      "CidrIp": "82.170.155.178/32",
      "Description": "from 82.170.155.178/32:22",
      "FromPort": 22,
      "IpProtocol": "tcp",
      "ToPort": 22
     },
     {
      "CidrIp": "82.170.155.178/32",
      "Description": "from 82.170.155.178/32:3389",
      "FromPort": 3389,
      "IpProtocol": "tcp",
      "ToPort": 3389
     }
    ],
    "VpcId": {
     "Ref": "vpcatallaadmin09930B01"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/adminSG/Resource"
   }
  },
  "atallapeering": {
   "Type": "AWS::EC2::VPCPeeringConnection",
   "Properties": {
    "PeerVpcId": {
     "Ref": "vpcatallaadmin09930B01"
    },
    "VpcId": {
     "Ref": "vpcatallaweb4BEE7EE3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/atalla_peering"
   }
  },
  "admintowebroute1": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcatallaadminpublicsubnetSubnet1RouteTable62F1F1C8"
    },
    "DestinationCidrBlock": "10.10.10.0/24",
    "VpcPeeringConnectionId": {
     "Fn::GetAtt": [
      "atallapeering",
      "Id"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin_to_web_route1"
   }
  },
  "admintowebroute2": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcatallaadminpublicsubnetSubnet2RouteTableA1872FC3"
    },
    "DestinationCidrBlock": "10.10.10.0/24",
    "VpcPeeringConnectionId": {
     "Fn::GetAtt": [
      "atallapeering",
      "Id"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin_to_web_route2"
   }
  },
  "webtoadminroute1": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcatallawebprivatesubnetSubnet1RouteTable8AE51475"
    },
    "DestinationCidrBlock": "10.20.20.0/24",
    "VpcPeeringConnectionId": {
     "Fn::GetAtt": [
      "atallapeering",
      "Id"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web_to_admin_route1"
   }
  },
  "webtoadminroute2": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcatallawebprivatesubnetSubnet2RouteTable6E78400C"
    },
    "DestinationCidrBlock": "10.20.20.0/24",
    "VpcPeeringConnectionId": {
     "Fn::GetAtt": [
      "atallapeering",
      "Id"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web_to_admin_route2"
   }
  },
  "webtoadminroute3": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcatallawebprivatesubnetSubnet3RouteTableA689674A"
    },
    "DestinationCidrBlock": "10.20.20.0/24",
    "VpcPeeringConnectionId": {
     "Fn::GetAtt": [
      "atallapeering",
      "Id"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/web_to_admin_route3"
   }
  },
  "wsKeyPair": {
   "Type": "AWS::EC2::KeyPair",
   "Properties": {
    "KeyName": "Atalla_ssh_KeyPair2390"
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/ws_KeyPair"
   }
  },
  "adminserverInstanceRole293D3FAF": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProjectAtallaVpcStack/admin_server"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin_server/InstanceRole/Resource"
   }
  },
  "adminserverInstanceProfile3C08ACB6": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "adminserverInstanceRole293D3FAF"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin_server/InstanceProfile"
   }
  },
  "adminserverBE7C02BE": {
   "Type": "AWS::EC2::Instance",
   "Properties": {
    "AvailabilityZone": "eu-central-1b",
    "BlockDeviceMappings": [
     {
      "DeviceName": "/dev/sda1",
      "Ebs": {
       "DeleteOnTermination": true,
       "Encrypted": true,
       "KmsKeyId": {
        "Fn::ImportValue": "ProjectAtallaKmsStack:ExportsOutputFnGetAttEBSAdminKey7632249CArn4F0137C3"
       },
       "VolumeSize": 30
      }
     }
    ],
    "IamInstanceProfile": {
     "Ref": "adminserverInstanceProfile3C08ACB6"
    },
    "ImageId": {
     "Ref": "SsmParameterValueawsserviceamiwindowslatestWindowsServer2022EnglishFullBaseC96584B6F00A464EAD1953AFF4B05118Parameter"
    },
    "InstanceType": "t3.micro",
    "KeyName": "Atalla_ssh_KeyPair2390",
    "SecurityGroupIds": [
     {
      "Fn::GetAtt": [
       "adminSG897E7E8B",
       "GroupId"
      ]
     }
    ],
    "SubnetId": {
     "Ref": "vpcatallaadminpublicsubnetSubnet2Subnet1D7DDB73"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "ProjectAtallaVpcStack/admin_server"
     }
    ],
    "UserData": {
     "Fn::Base64": "<powershell><powershell>\nAdd-WindowsCapability -Online -Name OpenSSH.Server~~~~0.0.1.0\nStart-Service ssh-agent\nStart-Service sshd</powershell>"
    }
   },
   "DependsOn": [
    "adminserverInstanceRole293D3FAF"
   ],
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/admin_server/Resource"
   }
  },
  "roleC7B7E775": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ec2.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AmazonEC2RoleforSSM"
       ]
      ]
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/role/Resource"
   }
  },
  "roleDefaultPolicy7C980EBA": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "s3:GetBucket*",
        "s3:GetObject*",
        "s3:List*"
       ],
       "Effect": "Allow",
       "Resource": [
        {
         "Fn::ImportValue": "ProjectAtallaS3Stack:ExportsOutputFnGetAttstoragebucket04DF299DArn1B3E0545"
        },
        {
         "Fn::Join": [
          "",
          [
           {
            "Fn::ImportValue": "ProjectAtallaS3Stack:ExportsOutputFnGetAttstoragebucket04DF299DArn1B3E0545"
           },
           "/*"
          ]
         ]
        }
       ]
      },
      {
       "Action": [
        "kms:Decrypt",
        "kms:DescribeKey"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::ImportValue": "ProjectAtallaKmsStack:ExportsOutputFnGetAttBucketKey2EA18C7EArn6FBCB8F6"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "roleDefaultPolicy7C980EBA",
    "Roles": [
     {
      "Ref": "roleC7B7E775"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/role/DefaultPolicy/Resource"
   }
  },
  "launchTempProfile9B047DE3": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "roleC7B7E775"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/launchTemp/Profile"
   }
  },
  "launchTemp86EB742A": {
   "Type": "AWS::EC2::LaunchTemplate",
   "Properties": {
    "LaunchTemplateData": {
     "BlockDeviceMappings": [
      {
       "DeviceName": "/dev/xvda",
       "Ebs": {
        "DeleteOnTermination": true,
        "Encrypted": true,
        "VolumeSize": 8
       }
      }
     ],
     "IamInstanceProfile": {
      "Arn": {
       "Fn::GetAtt": [
        "launchTempProfile9B047DE3",
        "Arn"
       ]
      }
     },
     "ImageId": {
      "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestamznamihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter"
     },
     "InstanceType": "t3.micro",
     "KeyName": "Atalla_ssh_KeyPair2390",
     "Monitoring": {
      "Enabled": true
     },
     "SecurityGroupIds": [
      {
       "Fn::GetAtt": [
        "webSG9F367DE6",
        "GroupId"
       ]
      }
     ],
     "TagSpecifications": [
      {
       "ResourceType": "instance",
       "Tags": [
        {
         "Key": "Name",
         "Value": "ProjectAtallaVpcStack/launchTemp"
        }
       ]
      },
      {
       "ResourceType": "volume",
       "Tags": [
        {
         "Key": "Name",
         "Value": "ProjectAtallaVpcStack/launchTemp"
        }
       ]
      }
     ],
     "UserData": {
      "Fn::Base64": {
       "Fn::Join": [
        "",
        [
         "#!/bin/bash\nmkdir -p $(dirname '/tmp/user_data.sh')\naws s3 cp 's3://",
         {
          "Fn::ImportValue": "ProjectAtallaS3Stack:ExportsOutputRefstoragebucket04DF299D53AAA7A7"
         },
         "/user_data.sh' '/tmp/user_data.sh'\nset -e\nchmod +x '/tmp/user_data.sh'\n'/tmp/user_data.sh'"
        ]
       ]
      }
     }
    },
    "TagSpecifications": [
     {
      "ResourceType": "launch-template",
      "Tags": [
       {
        "Key": "Name",
        "Value": "ProjectAtallaVpcStack/launchTemp"
       }
      ]
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/launchTemp/Resource"
   }
  },
  "asgASG4D014670": {
   "Type": "AWS::AutoScaling::AutoScalingGroup",
   "Properties": {
    "MaxSize": "3",
    "MinSize": "1",
    "Cooldown": "300",
    "HealthCheckGracePeriod": 300,
    "HealthCheckType": "ELB",
    "LaunchTemplate": {
     "LaunchTemplateId": {
      "Ref": "launchTemp86EB742A"
     },
     "Version": {
      "Fn::GetAtt": [
       "launchTemp86EB742A",
       "LatestVersionNumber"
      ]
     }
    },
    "TargetGroupARNs": [
     {
      "Ref": "apLblistener443target80Group6761BB78"
     }
    ],
    "VPCZoneIdentifier": [
     {
      "Ref": "vpcatallawebprivatesubnetSubnet1SubnetFB418546"
     },
     {
      "Ref": "vpcatallawebprivatesubnetSubnet2SubnetFC68112C"
     },
     {
      "Ref": "vpcatallawebprivatesubnetSubnet3SubnetFEFCCF9A"
     }
    ]
   },
   "UpdatePolicy": {
    "AutoScalingScheduledAction": {
     "IgnoreUnmodifiedGroupSizeProperties": true
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/asg/ASG"
   }
  },
  "asgScalingPolicyscalepolicy3C9670AF": {
   "Type": "AWS::AutoScaling::ScalingPolicy",
   "Properties": {
    "AutoScalingGroupName": {
     "Ref": "asgASG4D014670"
    },
    "PolicyType": "TargetTrackingScaling",
    "TargetTrackingConfiguration": {
     "PredefinedMetricSpecification": {
      "PredefinedMetricType": "ASGAverageCPUUtilization"
     },
     "TargetValue": 70
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/asg/ScalingPolicyscale_policy/Resource"
   }
  },
  "apLb87C06AB8": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "apLbSecurityGroupC404307F",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "vpcatallawebpublicsubnetSubnet1Subnet9196B15F"
     },
     {
      "Ref": "vpcatallawebpublicsubnetSubnet2SubnetF3A7515D"
     },
     {
      "Ref": "vpcatallawebpublicsubnetSubnet3Subnet21EEFC0D"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "vpcatallawebpublicsubnetSubnet1DefaultRoute1ADB47E5",
    "vpcatallawebpublicsubnetSubnet1RouteTableAssociation3DD1AC3C",
    "vpcatallawebpublicsubnetSubnet2DefaultRoute5501E451",
    "vpcatallawebpublicsubnetSubnet2RouteTableAssociation908E52EA",
    "vpcatallawebpublicsubnetSubnet3DefaultRoute1566252A",
    "vpcatallawebpublicsubnetSubnet3RouteTableAssociationDD3ED3FE"
   ],
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/apLb/Resource"
   }
  },
  "apLbSecurityGroupC404307F": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB ProjectAtallaVpcStackapLb70CB7152",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 443",
      "FromPort": 443,
      "IpProtocol": "tcp",
      "ToPort": 443
     },
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "vpcatallaweb4BEE7EE3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/apLb/SecurityGroup/Resource"
   }
  },
  "apLbSecurityGrouptoProjectAtallaVpcStackwebSG8B013C9F80660C3D0F": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "GroupId": {
     "Fn::GetAtt": [
      "apLbSecurityGroupC404307F",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "webSG9F367DE6",
      "GroupId"
     ]
    },
    "FromPort": 80,
    "ToPort": 80
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/apLb/SecurityGroup/to ProjectAtallaVpcStackwebSG8B013C9F:80"
   }
  },
  "apLblistener4434959A23E": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "apLblistener443target80Group6761BB78"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "apLb87C06AB8"
    },
    "Certificates": [
     {
      "CertificateArn": "arn:aws:acm:eu-central-1:375002073204:certificate/86386424-44d8-4054-a4df-0536b7aeaecd"
     }
    ],
    "Port": 443,
    "Protocol": "HTTPS"
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/apLb/listener443/Resource"
   }
  },
  "apLblistener443target80Group6761BB78": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "HealthCheckEnabled": true,
    "HealthCheckIntervalSeconds": 5,
    "HealthCheckPath": "/",
    "HealthCheckPort": "80",
    "HealthCheckProtocol": "HTTP",
    "HealthCheckTimeoutSeconds": 2,
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "instance",
    "VpcId": {
     "Ref": "vpcatallaweb4BEE7EE3"
    }
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/apLb/listener443/target80Group/Resource"
   }
  },
  "apLbRedirect80To4432A1E1EB0": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "RedirectConfig": {
       "Port": "443",
       "Protocol": "HTTPS",
       "StatusCode": "HTTP_301"
      },
      "Type": "redirect"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "apLb87C06AB8"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/apLb/Redirect80To443/Resource"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31S0WrjMBD8lr4rul5Loa++EEq4UkQS+nqslW2iiywZadVgjP/91pYTO1fok3ZmltGsVg/y6VHe38E5LvT+tLCmlO2WQJ8EU39a1A+yfa+1WH64d7UUKphPINym0iH15FRtfCLcQWlx4ieuiNFrA2S8uzYLlUpr9GSxWqv+eAN64UvO0PRo7QgDN8woTjKigjjrsUJH4g3p7MOp0HbwmFD2n4j/onwnT+zKUWhujTO1RZ2CoeYl+FQPft8Sa3cIGOM4hUIMxh2W3jnUl0C/sVFggli7SOA05kcY61dITh93WNWWX6CXvjI3F66G+zphoJLtxuftXM6LrQr+wzClPO9jGDNXnYBEPmqwnFK2BYNtBtfpvnA7CAekXeA/xNwoTcY3RCfQQiSjrYd9CZazsPbJf66oa24YtvDK2q9BwzAMPMfzPhMJ3dhzqWd6DnYNPoNdJzYYf [...]
   },
   "Metadata": {
    "aws:cdk:path": "ProjectAtallaVpcStack/CDKMetadata/Default"
   },
   "Condition": "CDKMetadataAvailable"
  }
 },
 "Parameters": {
  "SsmParameterValueawsserviceamiwindowslatestWindowsServer2022EnglishFullBaseC96584B6F00A464EAD1953AFF4B05118Parameter": {
   "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
   "Default": "/aws/service/ami-windows-latest/Windows_Server-2022-English-Full-Base"
  },
  "SsmParameterValueawsserviceamiamazonlinuxlatestamznamihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter": {
   "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
   "Default": "/aws/service/ami-amazon-linux-latest/amzn-ami-hvm-x86_64-gp2"
  },
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Conditions": {
  "CDKMetadataAvailable": {
   "Fn::Or": [
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "af-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-northwest-1"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "sa-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-2"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-2"
       ]
      }
     ]
    }
   ]
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
